# covid-forecasting

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
preds/: README.md
preds/preds/: preds_ar_seed_0.csv  preds_ar_seed_1.csv  preds_ar_seed_2.csv  preds_ar_seed_3.csv  preds_ar_seed_4.csv  preds_ar_seed_5.csv  preds_ar_seed_6.csv  preds_ar_seed_7.csv  preds_ar_seed_8.csv  preds_ar_seed_9.csv  preds_arima_test_NL.csv  preds_elasticnet_train_global_test_NL_ar.csv  preds_elasticnet_train_global_test_NL_full.csv  preds_elasticnet_train_local_test_NL_ar.csv  preds_elasticnet_train_local_test_NL_full.csv  preds_full_nomobility_seed_0.csv  preds_full_nomobility_seed_1.csv  preds_full_nomobility_seed_2.csv  preds_full_nomobility_seed_3.csv  preds_full_nomobility_seed_4.csv  preds_full_nomobility_seed_5.csv  preds_full_nomobility_seed_6.csv  preds_full_nomobility_seed_7.csv  preds_full_nomobility_seed_8.csv  preds_full_nomobility_seed_9.csv  preds_full_nostringency_seed_0.csv  preds_full_nostringency_seed_1.csv  preds_full_nostringency_seed_2.csv  preds_full_nostringency_seed_3.csv  preds_full_nostringency_seed_4.csv  preds_full_nostringency_seed_5.csv  preds_full_nostringency_seed_6.csv  preds_full_nostringency_seed_7.csv  preds_full_nostringency_seed_8.csv  preds_full_nostringency_seed_9.csv  preds_full_noweather_seed_0.csv  preds_full_noweather_seed_1.csv  preds_full_noweather_seed_2.csv  preds_full_noweather_seed_3.csv  preds_full_noweather_seed_4.csv  (+39 more)
scripts/: run_analysis.py  run_baselines.py  run_tcn.py
tests/: test_metrics.py
(+16 files in other folders)
